--- a/README
+++ b/README
@@ -31,42 +31,55 @@ Langauge
 
 The language syntax is based roughly on XPath. At the base of the language is a "Query" expression.
 This returns a set of objects. Those objects can be heterogenous, but they all must be hashable.
+Querying works much the same as it does in XPath. By using the "/" operator the query traverses down
+the object heirarchy. For instance if one has an object like:
+	% class A(object):
+	%   def __init__(self, x):
+	%     self.x = x
+	% a = A('a string')
 
+The query:
+	% pyquery.execute("a/x", locals())
 
-Here is a degenerate example of the syntax:
+returns:
+	% set(['a string'])
 
-| x = [1, "string", type("Class Object", (object,), dict()), 5]
-| print pyquery.execute("x", locals())
+If an object is an iterable object when using the "/" operator instead of returning the object it
+instead returns each *distinct* item in the iterable.
+class A(object):
+  def __init__(self, x):
+    self.x = x
+a = A(['a string', '2 string', '3 string', 'blue string'])
 
-This would of simply return:
+The query:
+	% pyquery.execute("a/x", locals())
 
-| set([1, "string", type("Class Object", (object,), dict()), 5])
+returns (in no particular order, since it is a set):
+	% set(['a string', '2 string', '3 string', 'blue string'])
 
-To make the query more interesting one can add where conditions consider:
+You can add where conditions to the query at any level:
+	% pyquery.execute("a/x[self[0].isdigit()]", locals())
 
-| x = [0,1,2,3,4,5,6,7,8,9,10]
-| print pyquery.execute("x[self.__mod__(2) == 0]", locals())
+returns:
+	% set(['2 string', '3 string'])
 
-Would return all of the even numbers:
+Where expressions can be quite powerful consider this tuple of tuples:
+	% lists = ((1,2,3),(5,6,7),(8,9,10),(1,3,5),(2,4,6),(5,7,9),(6,8,10))
 
-| set([0,2,4,6,8,10])
+Here is a query to return lists which only have even elements:
+	% pyquery.execute('lists[every item in <self> satisfies (item.__mod__(2) == 0)]', locals())
 
-Since we are working with set objects common set operations and be used such as union (|),
-intersection (&), and difference(-):
+returns:
+	% set([(2, 4, 6), (6, 8, 10)])
 
-| x = [0,1,2,3,4,5,6,7,8,9,10]
-| print pyquery.execute('x[self.__mod__(2)] & x[self.__mod__(3) == 2 and self >= 3]', locals())
+If now let us express the opposite query, by using set difference:
+	% pyquery.execute('lists - lists[every item in <self> satisfies (item.__mod__(2) == 0)]', locals())
 
-yields:
+returns:
+	% set([(8, 9, 10), (1, 3, 5), (5, 6, 7), (5, 7, 9), (1, 2, 3)])
 
-| set([5])
-
-----------------------------------------------------------------------------------------------------
-
-One is not limited to returning a subset of the objects queried. Here is an example where we query
-an object heirarchy to return one of the child objects.
-
-
+----------------------
+more examples to arrive ...
 
 Grammar
 -------
